--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -63,7 +63,7 @@ jobs:
           labels: |
             org.opencontainers.image.version=${{ env.BUILD_VERSION }}
             org.opencontainers.image.revision=${{ github.sha }}
-            org.opencontainers.image.title=${{ env.REPOSITORY }}
+            org.opencontainers.image.title=${{ env.REPOSITORY_DOCKERHUB }}
 
       - name: GitHub login
         if: ${{ github.event_name != 'pull_request' }}
