--- a/.github/workflows/yt-dlp.yml
+++ b/.github/workflows/yt-dlp.yml
@@ -81,7 +81,7 @@ jobs:
         uses: docker/login-action@9780b0c442fbb1117ed29e0efdff1e18412f7567 # v1.12.0
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}      
+          password: ${{ secrets.DOCKERHUB_TOKEN }}      
 
       - name: Build and push
         uses: docker/build-push-action@ca877d9245402d1537745e0e356eab47c3520991 # v2.8.0
